@@ -1,0 +1,147 @@
+<HTML>
+<HEAD><TITLE>StatusBar</TITLE></HEAD>
+<BODY BGCOLOR=white>
+<DL><DT><I><A HREF="#descr">NAME</A></I></DT>
+<DD><B>StatusBar</B>
+ - status bar widget
+</DD></DL>
+<DL>
+<DT><I>CREATION</I></DT>
+<DD><A HREF="#descr"><B>StatusBar</B></A> <I>pathName</I> ?<I>option value...</I>?</DD>
+</DL>
+<DL>
+<DT><I>STANDARD OPTIONS</I></DT>
+<DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-background">-background or -bg</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-borderwidth">-borderwidth or -bd</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-foreground">-foreground or -fg</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-orient">-orient</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-relief">-relief</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-troughcolor">-troughcolor</A></TR>
+</TR>
+</TABLE></DD>
+</DL>
+<DL>
+<DT><I><A HREF="#wso">WIDGET-SPECIFIC OPTIONS</A></I></DT>
+<DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-height">-height</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-showresize">-showresize</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-ipad">-ipad</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-pad">-pad</A></TR>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-width">-width</A>
+</TR>
+</TABLE></DD>
+</DL>
+<DL>
+<DT><I><A HREF="#wc">WIDGET COMMAND</A></I></DT>
+<DD><I>pathName</I> <A HREF="#cget"><B>cget</B></A>
+ <I>option</I>
+</DD>
+<DD><I>pathName</I> <A HREF="#configure"><B>configure</B></A>
+ ?<I>option</I>? ?<I>value</I> <I>option</I> <I>value</I> ...?
+</DD>
+</DL>
+<BR><HR WIDTH="100%"><BR>
+<B><A NAME="descr"></A>DESCRIPTION</B><BR>
+
+<P>
+StatusBar widget is a simple container widget with a corner resize control,
+meant to be placed at the bottom of a toplevel dialog.
+</P>
+
+<BR><HR WIDTH="50%"><BR>
+<B><A NAME="wso">WIDGET-SPECIFIC OPTIONS</A></B><BR>
+<DL><DT><A NAME="-height"><B>-height</B></A></DT>
+<DD>
+Specifies the desired height for the widget.
+</DD>
+</DL>
+<DL><DT><A NAME="-showresize"><B>-showresize</B></A></DT>
+<DD>
+Specifies whether to show the corner resize control.
+</DD>
+</DL>
+<DL><DT><A NAME="-pad"><B>-pad</B></A></DT>
+<DD>
+The spacing to place around the status bar.
+</DD>
+</DL>
+<DL><DT><A NAME="-ipad"><B>-ipad</B></A></DT>
+<DD>
+The spacing to place around individual status bar items.
+</DD>
+</DL>
+<DL><DT><A NAME="-width"><B>-width</B></A></DT>
+<DD>
+Specifies the desired width for the widget.
+</DD>
+</DL>
+
+<HR WIDTH="50%"><BR>
+<B><A NAME="wc">WIDGET COMMAND</A></B><BR>
+<DL><DT><A NAME="add"><I>pathName</I> <B>add</B></A> <B>widget</B>
+ ?<I>option</I> <I>value</I> <I>option</I> <I>value</I> ...?
+</DT><DD>
+Add a widget to the status bar. Possible options are:
+<DL>
+<DT><B>-weight</B></DT>
+<DD>Weighting of this item for resizing (passed to <B>grid</B>).</DD>
+<DT><B>-separator</B></DT>
+<DD>Whether to use a separator for this item.</DD>
+<DT><B>-sticky</B></DT>
+<DD>Passed on to grid.</DD>
+<DT><B>-pad</B></DT>
+<DD>Override of the widget's <B>-ipad</B> option for this item.</DD>
+</DL>
+</DD>
+</DL>
+<DL><DT><A NAME="cget"><I>pathName</I> <B>cget</B></A>
+ <I>option</I>
+</DT><DD>
+Returns the current value of the configuration option given by <I>option</I>.
+<I>Option</I> may have any of the values accepted by the creation command.
+</DD>
+</DL>
+<DL><DT><A NAME="configure"><I>pathName</I> <B>configure</B></A>
+ ?<I>option</I>? ?<I>value</I> <I>option</I> <I>value</I> ...?
+</DT><DD>
+
+Query or modify the configuration options of the widget. If no
+<I>option</I> is specified, returns a list describing all of the available
+options for <I>pathName</I>.  If <I>option</I> is specified with no
+<I>value</I>, then the command returns a list describing the one named
+<I>option</I> (this list will be identical to the corresponding sublist of
+the value returned if no <I>option</I> is specified). If one or more
+<I>option-value</I> pairs are specified, then the command modifies the
+given widget option(s) to have the given value(s); in this case the command
+returns an empty string.
+<I>Option</I> may have any of the values accepted by the creation command.
+Read-only options are not be modified.
+</DD>
+</DL>
+<DL><DT><A NAME="delete"><I>pathName</I> <B>delete</B></A>
+<B>widget</B> ?<I>widget</I> ...?
+</DT><DD>
+Delete a widget and associated state from the status bar.</DD>
+</DL>
+<DL><DT><A NAME="getframe"><I>pathName</I> <B>getframe</B></A>
+</DT><DD>
+Get the frame widget for the status bar in which status bar items should be
+created.</DD>
+</DD>
+</DL>
+<DL><DT><A NAME="items"><I>pathName</I> <B>items</B></A>
+</DT><DD>List of items in the status bar.</DD>
+<DL>
+
+</BODY></HTML>
