@@ -38,6 +38,8 @@
 <TD>Notebook manager widget</TD></TR>
 <TR><TD><A HREF="Dialog.html">Dialog</A></TD>
 <TD>Dialog abstraction with custom buttons</TD></TR>
+<TR><TD><A HREF="StatusBar.html">StatusBar</A></TD>
+<TD>Status bar widget</TD></TR>
 </TABLE>
 <BR><BR><DT><B>Composite Widgets</B>
 <DD><TABLE BORDER=0 CELLSPACING=0>
