@@ -1,3 +1,12 @@
+2004-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* statusbar.tcl (new): Addition of a statusbar container widget
+	* pkgIndex.tcl:        with resize control
+	* Makefile.in:
+	* BWman/contents.html: 
+	* BWman/navtree.html:
+	* BWman/StatusBar.html (new): 
+
 2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* font.tcl (SelectFont::create): don't hardcode -bd 2 when
